--- a/src/main/resources/gui/fxml/menu.fxml
+++ b/src/main/resources/gui/fxml/menu.fxml
@@ -15,90 +15,73 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.MainPageController">
     <top>
-        <VBox prefHeight="134.0" prefWidth="1200.0" BorderPane.alignment="CENTER">
+        <VBox prefHeight="97.0" prefWidth="1280.0" BorderPane.alignment="CENTER">
             <children>
                 <HBox fx:id="toolbarHBox" prefHeight="90.0" prefWidth="1200.0" />
                 <HBox prefHeight="39.0" prefWidth="1200.0">
                     <children>
-                        <HBox alignment="CENTER" prefHeight="106.0" prefWidth="636.0">
-                            <children>
-                                <TextField fx:id="searchTextFieldForName" prefHeight="39.0" prefWidth="601.0" promptText="search name">
-                                    <HBox.margin>
-                                        <Insets bottom="10.0" left="10.0" right="19.0" top="10.0" />
-                                    </HBox.margin>
-                                    <padding>
-                                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                    </padding>
-                                </TextField>
-                            </children>
-                        </HBox>
-                        <HBox alignment="CENTER" prefHeight="106.0" prefWidth="104.0">
-                            <children>
-                                <ImageView fx:id="searchIconImage" fitHeight="56.0" fitWidth="78.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@../pic/icons8-search-480.png" />
-                                    </image>
-                                </ImageView>
-                            </children>
-                        </HBox>
-                        <HBox alignment="TOP_RIGHT" prefHeight="63.0" prefWidth="514.0">
-                            <children>
-                                <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                  <HBox prefHeight="56.0" prefWidth="271.0">
+                     <children>
+                                <HBox alignment="CENTER" prefHeight="64.0" prefWidth="183.0">
                                     <children>
-                                        <CheckBox fx:id="offCheckBox" mnemonicParsing="false" text="offs" />
+                                      <TextField fx:id="searchTextFieldForName" prefHeight="37.0" prefWidth="149.0" promptText="search name">
+                                          <padding>
+                                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                          </padding>
+                                      </TextField>
                                     </children>
                                 </HBox>
-                                <HBox prefHeight="105.0" prefWidth="220.0">
-                                    <children>
-                                        <TreeView fx:id="categoriesTreeView" prefHeight="105.0" prefWidth="228.0" />
-                                    </children>
-                                </HBox>
-                                <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                                    <children>
-                                        <VBox prefHeight="104.0" prefWidth="211.0">
-                                            <children>
-                                                <HBox alignment="CENTER" prefHeight="96.0" prefWidth="200.0">
-                                                    <children>
-                                                        <Label prefHeight="27.0" prefWidth="180.0" text="choose background" />
-                                                    </children>
-                                                </HBox>
-                                                <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                                                    <children>
-                                                        <ColorPicker fx:id="chooseBackgroundColorPicker" />
-                                                    </children>
-                                                </HBox>
-                                            </children>
-                                        </VBox>
-                                    </children>
-                                </HBox>
-                            </children>
-                        </HBox>
+                              <HBox alignment="CENTER" prefHeight="106.0" prefWidth="104.0">
+                                  <children>
+                                      <ImageView fx:id="searchIconImage" fitHeight="56.0" fitWidth="78.0" pickOnBounds="true" preserveRatio="true">
+                                          <image>
+                                              <Image url="@../pic/icons8-search-480.png" />
+                                          </image>
+                                      </ImageView>
+                                  </children>
+                              </HBox>
+                     </children>
+                  </HBox>
+                  <Region prefHeight="56.0" prefWidth="833.0" />
+                          <HBox alignment="CENTER" prefHeight="56.0" prefWidth="237.0">
+                              <children>
+                                  <VBox prefHeight="104.0" prefWidth="211.0">
+                                      <children>
+                                          <HBox alignment="CENTER" prefHeight="96.0" prefWidth="200.0">
+                                              <children>
+                                                  <Label prefHeight="26.0" prefWidth="123.0" text="choose background">
+                                       <padding>
+                                          <Insets left="10.0" right="10.0" />
+                                       </padding>
+                                    </Label>
+                                              </children>
+                                          </HBox>
+                                          <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                                              <children>
+                                                  <ColorPicker fx:id="chooseBackgroundColorPicker" />
+                                              </children>
+                                          </HBox>
+                                      </children>
+                                  </VBox>
+                              </children>
+                          </HBox>
                     </children>
                 </HBox>
             </children>
         </VBox>
     </top>
     <left>
-        <VBox prefHeight="466.0" prefWidth="215.0" BorderPane.alignment="CENTER">
+        <VBox prefHeight="586.0" prefWidth="167.0" BorderPane.alignment="CENTER">
             <children>
-                <VBox alignment="CENTER" prefHeight="120.0" prefWidth="260.0">
+                <VBox alignment="CENTER" prefHeight="66.0" prefWidth="167.0">
                     <children>
-                        <ComboBox fx:id="sortFieldComBowBox" prefHeight="39.0" prefWidth="243.0" />
-                    </children>
-                </VBox>
-                <VBox alignment="CENTER" prefHeight="113.0" prefWidth="260.0">
-                    <children>
-                        <ComboBox fx:id="isAcendingComBowBox" prefHeight="39.0" prefWidth="241.0" />
-                    </children>
-                </VBox>
-                <VBox alignment="CENTER" prefHeight="112.0" prefWidth="260.0">
-                    <children>
-                        <TextField fx:id="brandTextField" promptText="brand">
+                        <TextField fx:id="brandTextField" prefHeight="37.0" prefWidth="128.0" promptText="brand">
                             <VBox.margin>
                                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                             </VBox.margin>
@@ -108,18 +91,34 @@
                         </TextField>
                     </children>
                 </VBox>
-                <VBox prefHeight="270.0" prefWidth="260.0">
+                <VBox prefHeight="77.0" prefWidth="167.0">
                     <children>
-                        <VBox prefHeight="274.0" prefWidth="260.0">
-                            <children>
-                                <VBox alignment="CENTER" prefHeight="158.0" prefWidth="260.0">
-                                    <children>
-                                        <Label text="price" />
-                                    </children>
-                                </VBox>
-                                <VBox fx:id="priceVBoxForSlider" alignment="CENTER" prefHeight="170.0" prefWidth="260.0" />
-                            </children>
-                        </VBox>
+                          <VBox alignment="CENTER" prefHeight="45.0" prefWidth="167.0">
+                              <children>
+                                  <Label text="price" />
+                              </children>
+                          </VBox>
+                          <VBox fx:id="priceVBoxForSlider" alignment="CENTER" prefHeight="33.0" prefWidth="167.0" />
+                    </children>
+                </VBox>
+            <VBox prefHeight="289.0" prefWidth="167.0">
+               <children>
+                            <TreeView fx:id="categoriesTreeView" prefHeight="303.0" prefWidth="167.0" />
+               </children>
+            </VBox>
+            <VBox alignment="CENTER" prefHeight="46.0" prefWidth="167.0">
+               <children>
+                            <CheckBox fx:id="offCheckBox" mnemonicParsing="false" text="offs" />
+               </children>
+            </VBox>
+                <VBox alignment="CENTER" prefHeight="55.0" prefWidth="167.0">
+                    <children>
+                        <ComboBox fx:id="isAcendingComBowBox" prefHeight="39.0" prefWidth="241.0" />
+                    </children>
+                </VBox>
+                <VBox alignment="CENTER" prefHeight="45.0" prefWidth="167.0">
+                    <children>
+                        <ComboBox fx:id="sortFieldComBowBox" prefHeight="39.0" prefWidth="243.0" />
                     </children>
                 </VBox>
             </children>
