--- a/src/main/resources/gui/fxml/Comment.fxml
+++ b/src/main/resources/gui/fxml/Comment.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -28,6 +29,11 @@
                               <Font size="16.0" />
                            </font>
                         </TextField>
+                        <Button mnemonicParsing="false" prefHeight="38.0" prefWidth="80.0" text="Submit" HBox.hgrow="ALWAYS">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Button>
                      </children>
                      <opaqueInsets>
                         <Insets />
@@ -45,9 +51,10 @@
                   </TextArea>
                </children>
             </VBox>
-            <VBox fx:id="commentBox" prefHeight="168.0" prefWidth="598.0" spacing="20.0">
+            <VBox fx:id="commentBox" prefHeight="168.0" prefWidth="598.0" spacing="10.0">
                 <children>
                     <fx:include source="SingleComment.fxml" />
+                  <Separator prefWidth="200.0" />
                     <fx:include source="SingleComment.fxml" />
                 </children> 
             </VBox>
