--- a/src/main/resources/gui/fxml/singleProduct.fxml
+++ b/src/main/resources/gui/fxml/singleProduct.fxml
@@ -13,7 +13,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <VBox prefHeight="69.0" prefWidth="1280.0" BorderPane.alignment="CENTER" />
@@ -183,7 +182,7 @@
                                     </HBox>
                                     <HBox alignment="CENTER" prefHeight="41.0" prefWidth="315.0">
                                        <children>
-                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="aria khare" wrappingWidth="202.80337715148926" />
+                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="bagher qomi" wrappingWidth="202.80337715148926" />
                                        </children>
                                     </HBox>
                                  </children>
