--- a/src/main/resources/gui/fxml/SingleMenuTwo.fxml
+++ b/src/main/resources/gui/fxml/SingleMenuTwo.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
@@ -16,27 +17,27 @@
 
 <ScrollPane prefHeight="672.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <content>
-      <VBox prefHeight="647.0" prefWidth="1265.0">
+      <VBox prefHeight="658.0" prefWidth="1265.0">
          <children>
-            <VBox prefHeight="56.0" prefWidth="1265.0" />
-            <HBox prefHeight="298.0" prefWidth="1265.0">
+            <VBox prefHeight="47.0" prefWidth="1265.0" />
+            <HBox prefHeight="245.0" prefWidth="1265.0">
                <children>
-                  <HBox alignment="CENTER" prefHeight="298.0" prefWidth="353.0">
+                  <HBox alignment="CENTER" prefHeight="253.0" prefWidth="342.0">
                      <children>
-                        <VBox prefHeight="298.0" prefWidth="395.0">
+                        <VBox prefHeight="258.0" prefWidth="342.0">
                            <children>
-                              <ImageView fitHeight="252.0" fitWidth="394.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="228.0" fitWidth="351.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../pic/background.jpg" />
                                  </image>
                               </ImageView>
-                              <VBox prefHeight="54.0" prefWidth="435.0">
+                              <VBox prefHeight="25.0" prefWidth="342.0">
                                  <children>
-                                    <HBox prefHeight="53.0" prefWidth="395.0">
+                                    <HBox prefHeight="32.0" prefWidth="182.0">
                                        <children>
-                                          <HBox alignment="CENTER" prefHeight="46.0" prefWidth="110.0">
+                                          <HBox alignment="CENTER" prefHeight="37.0" prefWidth="28.0">
                                              <children>
-                                                <ImageView fitHeight="44.0" fitWidth="78.0" pickOnBounds="true" preserveRatio="true">
+                                                <ImageView fitHeight="34.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                                                    <image>
                                                       <Image url="@../pic/icons8-minus-64.png" />
                                                    </image>
@@ -44,7 +45,7 @@
                                                 <MediaImageCell />
                                              </children>
                                           </HBox>
-                                          <HBox alignment="CENTER" prefHeight="46.0" prefWidth="423.0">
+                                          <HBox alignment="CENTER" prefHeight="32.0" prefWidth="91.0">
                                              <children>
                                                 <Text strokeType="OUTSIDE" strokeWidth="0.0" text="6">
                                                    <font>
@@ -53,13 +54,18 @@
                                                 </Text>
                                              </children>
                                           </HBox>
-                                          <HBox alignment="CENTER_RIGHT" prefHeight="46.0" prefWidth="123.0">
+                                          <HBox alignment="CENTER_RIGHT" prefHeight="32.0" prefWidth="7.0">
                                              <children>
-                                                <ImageView fitHeight="45.0" fitWidth="122.0" pickOnBounds="true" preserveRatio="true">
+                                                <ImageView fitHeight="28.0" fitWidth="39.0" pickOnBounds="true" preserveRatio="true">
                                                    <image>
                                                       <Image url="@../pic/plus.png" />
                                                    </image>
                                                 </ImageView>
+                                             </children>
+                                          </HBox>
+                                          <HBox alignment="CENTER_RIGHT" prefHeight="32.0" prefWidth="192.0">
+                                             <children>
+                                                <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="126.0" text="Add to compare list" />
                                              </children>
                                           </HBox>
                                        </children></HBox>
@@ -145,16 +151,29 @@
                                        <children>
                                           <VBox alignment="CENTER" prefHeight="53.0" prefWidth="227.0">
                                              <children>
-                                                <Slider>
+                                                <Slider max="5.0" showTickLabels="true" showTickMarks="true">
                                                    <VBox.margin>
                                                       <Insets left="10.0" right="10.0" />
                                                    </VBox.margin>
                                                 </Slider>
                                              </children>
                                           </VBox>
-                                          <VBox alignment="CENTER_RIGHT" prefHeight="56.0" prefWidth="227.0">
+                                          <VBox alignment="CENTER_RIGHT" prefHeight="43.0" prefWidth="141.0">
                                              <children>
-                                                <Button mnemonicParsing="false" prefHeight="37.0" prefWidth="67.0" text="rate" />
+                                                <HBox prefHeight="100.0" prefWidth="200.0">
+                                                   <children>
+                                                      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                                                         <children>
+                                                            <Button mnemonicParsing="false" text="compare" />
+                                                         </children>
+                                                      </HBox>
+                                                      <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0">
+                                                         <children>
+                                                            <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="62.0" text="rate" />
+                                                         </children>
+                                                      </HBox>
+                                                   </children>
+                                                </HBox>
                                              </children>
                                           </VBox>
                                        </children>
@@ -186,7 +205,11 @@
                               </VBox>
                            </children>
                         </VBox>
-                        <TableView prefHeight="345.0" prefWidth="397.0" />
+                        <TableView prefHeight="345.0" prefWidth="397.0">
+                           <columns>
+                              <TableColumn prefWidth="120.0" text="Name" />
+                              <TableColumn prefWidth="274.6666259765625" text="Feature" />
+                           </columns></TableView>
                      </children>
                   </HBox>
                </children>
