--- a/src/main/resources/gui/fxml/menu.fxml
+++ b/src/main/resources/gui/fxml/menu.fxml
@@ -166,7 +166,7 @@
     <center>
         <ScrollPane prefHeight="742.0" prefWidth="1540.0" BorderPane.alignment="CENTER">
          <content>
-            <GridPane prefHeight="607.0" prefWidth="1098.0">
+            <GridPane fx:id="mainGrid" prefHeight="607.0" prefWidth="1098.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
