--- a/src/main/resources/gui/fxml/SingleProductPage.fxml
+++ b/src/main/resources/gui/fxml/SingleProductPage.fxml
@@ -13,7 +13,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<?import org.controlsfx.control.cell.MediaImageCell?>
 
 <ScrollPane prefHeight="672.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <content>
@@ -35,33 +34,22 @@
                                  <children>
                                     <HBox prefHeight="32.0" prefWidth="182.0">
                                        <children>
-                                          <HBox alignment="CENTER" prefHeight="37.0" prefWidth="28.0">
+                                          <HBox alignment="CENTER" prefHeight="32.0" prefWidth="91.0" spacing="10.0">
                                              <children>
-                                                <ImageView fitHeight="34.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
-                                                   <image>
-                                                      <Image url="@../pic/icons8-minus-64.png" />
-                                                   </image>
-                                                </ImageView>
-                                                <MediaImageCell />
-                                             </children>
-                                          </HBox>
-                                          <HBox alignment="CENTER" prefHeight="32.0" prefWidth="91.0">
-                                             <children>
+                                                <Button mnemonicParsing="false" text="-" />
                                                 <Text strokeType="OUTSIDE" strokeWidth="0.0" text="6">
                                                    <font>
                                                       <Font size="18.0" />
                                                    </font>
                                                 </Text>
+                                                <Button mnemonicParsing="false" text="+" />
                                              </children>
-                                          </HBox>
-                                          <HBox alignment="CENTER_RIGHT" prefHeight="32.0" prefWidth="7.0">
-                                             <children>
-                                                <ImageView fitHeight="28.0" fitWidth="39.0" pickOnBounds="true" preserveRatio="true">
-                                                   <image>
-                                                      <Image url="@../pic/plus.png" />
-                                                   </image>
-                                                </ImageView>
-                                             </children>
+                                             <opaqueInsets>
+                                                <Insets right="5.0" />
+                                             </opaqueInsets>
+                                             <HBox.margin>
+                                                <Insets left="5.0" right="5.0" />
+                                             </HBox.margin>
                                           </HBox>
                                           <HBox alignment="CENTER_RIGHT" prefHeight="32.0" prefWidth="192.0">
                                              <children>
