--- a/src/main/resources/gui/fxml/SingleProduct.fxml
+++ b/src/main/resources/gui/fxml/SingleProduct.fxml
@@ -14,13 +14,13 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<ScrollPane prefHeight="672.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<ScrollPane prefHeight="672.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.SingleProductController">
    <content>
       <VBox prefHeight="658.0" prefWidth="1265.0">
          <children>
-            <HBox prefHeight="345.0" prefWidth="877.0" spacing="20.0">
+            <HBox spacing="20.0">
                <children>
-                  <VBox>
+                  <VBox spacing="20.0">
                      <children>
                         <ImageView fitHeight="240.0" fitWidth="320.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -148,34 +148,20 @@
                         </VBox>
                      </children>
                   </VBox>
-                  <VBox prefHeight="345.0" prefWidth="246.0">
+                  <VBox spacing="20.0">
                      <children>
-                        <VBox alignment="CENTER_LEFT" prefHeight="79.0" prefWidth="274.0">
-                           <padding>
-                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                           </padding>
-                           <VBox.margin>
-                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                           </VBox.margin>
-                           <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Description" wrappingWidth="155.46997451782227">
-                                 <font>
-                                    <Font size="18.0" />
-                                 </font>
-                              </Text>
-                           </children>
-                        </VBox>
-                        <VBox prefHeight="272.0" prefWidth="276.0">
-                           <children>
-                              <TextArea prefHeight="274.0" prefWidth="294.0" />
-                           </children>
-                        </VBox>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Description" wrappingWidth="155.46997451782227">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Text>
+                        <TextArea prefHeight="302.0" prefWidth="328.0" />
                      </children>
                   </VBox>
-                  <TableView prefHeight="345.0" prefWidth="397.0">
+                  <TableView prefHeight="346.0" prefWidth="266.0">
                      <columns>
-                        <TableColumn prefWidth="120.0" text="Name" />
-                        <TableColumn prefWidth="274.6666259765625" text="Feature" />
+                        <TableColumn prefWidth="123.19995272159576" text="Name" />
+                        <TableColumn maxWidth="164.0000228881836" minWidth="-1.0" prefWidth="142.40002288818357" text="Feature" />
                      </columns>
                   </TableView>
                </children>
