--- a/src/main/resources/gui/fxml/OrderItem.fxml
+++ b/src/main/resources/gui/fxml/OrderItem.fxml
@@ -1,6 +1,68 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="550.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" />
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="147.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <VBox alignment="CENTER_LEFT" prefHeight="147.0" prefWidth="243.0">
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+         <children>
+            <HBox alignment="CENTER" prefHeight="84.0" prefWidth="222.0" spacing="30.0">
+               <children>
+                  <Label prefHeight="17.0" prefWidth="67.0" text="Seller" />
+                  <TextField prefHeight="25.0" prefWidth="128.0" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" layoutX="20.0" layoutY="42.0" prefHeight="84.0" prefWidth="222.0" spacing="30.0">
+               <children>
+                  <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="74.0" text="Product" />
+                  <TextField prefHeight="25.0" prefWidth="133.0" />
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+      <VBox prefHeight="147.0" prefWidth="173.0">
+         <children>
+            <HBox alignment="CENTER" prefHeight="84.0" prefWidth="222.0" spacing="30.0">
+               <children>
+                  <Label prefHeight="17.0" prefWidth="87.0" text="Main price" />
+                  <TextField prefHeight="25.0" prefWidth="67.0" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="84.0" prefWidth="222.0" spacing="30.0">
+               <children>
+                  <Label prefHeight="17.0" prefWidth="83.0" text="Paid price" />
+                  <TextField prefHeight="25.0" prefWidth="67.0" />
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+      <VBox prefHeight="147.0" prefWidth="189.0">
+         <HBox.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </HBox.margin>
+         <children>
+            <HBox alignment="CENTER" prefHeight="71.0" prefWidth="184.0" spacing="30.0">
+               <children>
+                  <Label prefHeight="17.0" prefWidth="87.0" text="Amount" />
+                  <TextField prefHeight="25.0" prefWidth="145.0" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="65.0" prefWidth="184.0" spacing="30.0">
+               <children>
+                  <Label prefHeight="17.0" prefWidth="47.0" text="State" />
+                  <TextField prefHeight="25.0" prefWidth="103.0" />
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+   </children>
+</HBox>
