--- a/src/main/resources/gui/fxml/OrderItem.fxml
+++ b/src/main/resources/gui/fxml/OrderItem.fxml
@@ -3,9 +3,9 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Text?>
 
 
 <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="147.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
@@ -18,13 +18,13 @@
             <HBox alignment="CENTER" prefHeight="84.0" prefWidth="222.0" spacing="30.0">
                <children>
                   <Label prefHeight="17.0" prefWidth="67.0" text="Seller" />
-                  <TextField prefHeight="25.0" prefWidth="128.0" />
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="115.47002911567688" />
                </children>
             </HBox>
             <HBox alignment="CENTER" layoutX="20.0" layoutY="42.0" prefHeight="84.0" prefWidth="222.0" spacing="30.0">
                <children>
                   <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="74.0" text="Product" />
-                  <TextField prefHeight="25.0" prefWidth="133.0" />
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="115.47002911567688" />
                </children>
             </HBox>
          </children>
@@ -34,13 +34,13 @@
             <HBox alignment="CENTER" prefHeight="84.0" prefWidth="222.0" spacing="30.0">
                <children>
                   <Label prefHeight="17.0" prefWidth="87.0" text="Main price" />
-                  <TextField prefHeight="25.0" prefWidth="67.0" />
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="66.80334234237671" />
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="84.0" prefWidth="222.0" spacing="30.0">
                <children>
                   <Label prefHeight="17.0" prefWidth="83.0" text="Paid price" />
-                  <TextField prefHeight="25.0" prefWidth="67.0" />
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="70.13665521144867" />
                </children>
             </HBox>
          </children>
@@ -53,13 +53,13 @@
             <HBox alignment="CENTER" prefHeight="71.0" prefWidth="184.0" spacing="30.0">
                <children>
                   <Label prefHeight="17.0" prefWidth="87.0" text="Amount" />
-                  <TextField prefHeight="25.0" prefWidth="145.0" />
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="99.4700288772583" />
                </children>
             </HBox>
             <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="65.0" prefWidth="184.0" spacing="30.0">
                <children>
                   <Label prefHeight="17.0" prefWidth="47.0" text="State" />
-                  <TextField prefHeight="25.0" prefWidth="103.0" />
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="93.46996855735779" />
                </children>
             </HBox>
          </children>
