--- a/src/main/resources/gui/fxml/PersonalInfoPage.fxml
+++ b/src/main/resources/gui/fxml/PersonalInfoPage.fxml
@@ -3,9 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -112,17 +109,6 @@
                         <Insets left="10.0" />
                      </VBox.margin>
                         </HBox>
-                  <TableView prefHeight="333.0" prefWidth="568.0">
-                    <columns>
-                        <TableColumn prefWidth="125.99995422363281" text="Buyer" />
-                      <TableColumn prefWidth="134.66664123535156" text="Date" />
-                      <TableColumn minWidth="6.0" prefWidth="102.0" text="price" />
-                        <TableColumn prefWidth="247.33333333333337" text="Address" />
-                    </columns>
-                     <VBox.margin>
-                        <Insets left="10.0" />
-                     </VBox.margin>
-                  </TableView>
                     </children>
                 </VBox>
             </children>
@@ -134,7 +120,7 @@
                         <Image url="@../pic/Main Menu.png" />
                     </image>
                 </ImageView>
-            <ScrollPane prefHeight="691.0" prefWidth="672.0" />
+            <VBox prefHeight="693.0" prefWidth="654.0" />
             </children>
         </VBox>
     </children>
